# ArucoPlaneDetection

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: PlaneDetection.h
src/: PlaneDetection.cpp  arucotest.cpp
