<?xml version="1.0"?>
<package format="2">
    <name>cal_data_collection</name>
    <version>0.0.0</version>
    <description>The calibration data collection package</description>

    <maintainer email="mfong@path-robotics.com">Mark</maintainer>

    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>boost</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>pylon</build_depend>
    <build_depend>pylon_camera</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>boost</exec_depend>
    <exec_depend>roslib</exec_depend>
    <exec_depend>pylon</exec_depend>
    <exec_depend>pylon_camera</exec_depend>
</package>